<resources>
    <string name="app_name">SWEN325A3</string>
    <string name="title">Location Finder</string>
    <string name="photo_of_compass_description">Photo of compass</string>
    <string name="start_finding">Start Finding!</string>
    <string name="begin">Begin</string>
    <string name="home_screen">Home Screen</string>
    <string name="add_location">Add Location</string>
    <string name="manage_active_locations">Manage Active Locations</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="compass">Compass</string>
</resources>