<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_compass"
        android:layout_width="307dp"
        android:layout_height="331dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/photo_of_compass_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/compass_icon" />

    <Button
        android:id="@+id/b_add_location_from_home"
        android:layout_width="306dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_location"
        app:layout_constraintEnd_toEndOf="@+id/main_compass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/main_compass"
        app:layout_constraintTop_toBottomOf="@+id/main_compass" />

    <Button
        android:id="@+id/b_manage_locations_from_home"
        android:layout_width="306dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/manage_active_locations"
        app:layout_constraintEnd_toEndOf="@+id/main_compass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/main_compass"
        app:layout_constraintTop_toBottomOf="@+id/b_add_location_from_home" />

    <Button
        android:id="@+id/b_tutorial_from_home"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/help"
        app:layout_constraintStart_toStartOf="@+id/main_compass"
        app:layout_constraintTop_toBottomOf="@+id/b_manage_locations_from_home" />

    <Button
        android:id="@+id/b_about_from_home"
        android:layout_width="140dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="@+id/main_compass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/b_tutorial_from_home"
        app:layout_constraintTop_toBottomOf="@+id/b_manage_locations_from_home" />

</androidx.constraintlayout.widget.ConstraintLayout>